--- a/bot/.golangci.yml
+++ b/bot/.golangci.yml
@@ -1,3 +1,5 @@
+version: 1.54.2
+
 run:
   timeout: 2m
 
@@ -9,4 +11,6 @@ linters:
     - gofmt
     - gosimple
     - ineffassign
+    - unused
+  disable:
     - typecheck
