--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,7 @@ jobs:
         uses: golangci/golangci-lint-action@v4
         with:
           version: v1.59.0
+          working-directory: bot
           args: --timeout=10m --verbose
           skip-cache: false
           skip-pkg-cache: false
