--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,5 @@ jobs:
         with:
           version: v1.59.0
           working-directory: bot
-          args: --timeout=10m --verbose
-          skip-cache: false
-          skip-pkg-cache: false
-          skip-build-cache: false
+          args: --timeout=5m
+          skip-cache: true
