Improve container stability and shutdown diagnostics
- Enhanced signal handling with detailed logging to identify shutdown causes
- Added graceful shutdown logging for better debugging
- Improved socketmode client error handling
- Fixed docker-compose service name mismatch (backend -> bot)
- Added health checks and resource limits to prevent container kills
- Added restart policy (unless-stopped) for better reliability
- Updated Dockerfile to include wget for health checks

This should help diagnose why containers are receiving shutdown signals
and prevent unexpected terminations due to resource limits or health check failures.

--- a/bot/Dockerfile
+++ b/bot/Dockerfile
@@ -17,7 +17,7 @@ RUN go build -o /bin/bot ./
 
 # Step 2: Create the final image
 FROM alpine:3.18
-RUN apk add --no-cache ca-certificates
+RUN apk add --no-cache ca-certificates wget
 COPY --from=builder /bin/bot /bin/bot
 VOLUME /data
 WORKDIR /data
