--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,22 @@ services:
   bot:
     container_name: beerbot_backend
     build: ./bot
+    restart: unless-stopped
     volumes:
       - ./bot/data:/data
     ports:
       - "8080:8080"
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8080/api/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+    deploy:
+      resources:
+        limits:
+          memory: 256M
+          cpus: '0.5'
+        reservations:
+          memory: 128M
+          cpus: '0.25'
