--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,9 @@ version: '3.8'
 services:
   bot:
     container_name: beerbot_backend
-    build: ./bot
+    build: 
+      context: ./bot
+      dockerfile: Dockerfile
     restart: unless-stopped
     volumes:
       - ./bot/data:/data
