ci: Optimize GitHub Actions build time from 7min to ~2-3min
Performance improvements for CI/CD:
- Split PR builds (amd64 only) vs main builds (multi-platform)
- Add Go modules pre-caching with actions/cache@v4
- Add registry-based cache fallback for Docker builds
- Add parallel test job that runs before builds
- Enhanced Docker cache with named mount IDs
- Pre-download Go modules before Docker build
- Add -trimpath build flag for reproducible builds
- Add go vet static analysis step

Expected improvements:
- PR builds: ~50% faster (single platform)
- Main builds: ~30% faster (better caching)
- Fail fast: Tests run in parallel, catch issues early
- Better cache utilization across builds

--- a/bot/Dockerfile
+++ b/bot/Dockerfile
@@ -6,18 +6,18 @@ WORKDIR /src
 COPY go.mod go.sum ./
 
 # Download dependencies with build cache
-RUN --mount=type=cache,target=/go/pkg/mod \
-    --mount=type=cache,target=/root/.cache/go-build \
+RUN --mount=type=cache,target=/go/pkg/mod,id=gomod \
+    --mount=type=cache,target=/root/.cache/go-build,id=gobuild \
     go mod download
 
 # Copy source code
 COPY . .
 
 # Build with cache mounts and optimizations (no CGO needed now!)
-RUN --mount=type=cache,target=/go/pkg/mod \
-    --mount=type=cache,target=/root/.cache/go-build \
+RUN --mount=type=cache,target=/go/pkg/mod,id=gomod \
+    --mount=type=cache,target=/root/.cache/go-build,id=gobuild \
     CGO_ENABLED=0 GOOS=linux GOARCH=amd64 \
-    go build -ldflags="-w -s" -a -installsuffix cgo -o /bin/bot ./
+    go build -ldflags="-w -s" -trimpath -o /bin/bot ./
 
 # Step 2: Create the final image
 FROM alpine:3.20
